--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "ts-rpc-client",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "rpc-client",
   "author": "PepeUnlimited Oy",
-  "main": "./lib/main.js",
-  "types": "./lib/main.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "ISC",
+  "scripts": {
+    "build": "tsc"
+  },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "typescript": "^3.7.4"
