--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-rpc-client",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "rpc-client",
   "author": "PepeUnlimited Oy",
   "main": "dist/index.js",
@@ -12,6 +12,10 @@
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
-    "typescript": "^3.7.4"
+    "typescript": "3.8.3",
+    "long": "4.0.0"
+  },
+  "dependencies": {
+    "@types/long": "^4.0.1"
   }
 }
