--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-rpc-client",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "description": "rpc-client",
   "author": "PepeUnlimited Oy",
   "main": "dist/index.js",
@@ -12,8 +12,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
-    "typescript": "3.8.3",
-    "long": "4.0.0"
+    "typescript": "3.8.3"
   },
   "dependencies": {
     "@types/long": "^4.0.1"
