--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "ts-rpc-client",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "rpc-client",
   "author": "PepeUnlimited Oy",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "license": "ISC",
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "republish": "rm -rf dist/ && tsc && npm publish"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
-    "typescript": "3.8.3"
+    "typescript": "4.0.5"
   },
   "dependencies": {
     "@types/long": "^4.0.1"
